Projects page desktop layout adjustments

--- a/src/jade/modules/_mobile-phone.jade
+++ b/src/jade/modules/_mobile-phone.jade
@@ -2,5 +2,4 @@
   .mobile-phone__camera
   .mobile-phone__speaker
   .mobile-phone__screen
-  
-  //- img(src="", alt="" class="mobile-phone__screen")
+  img(src="img/chime_mobile.png", class="mobile-phone__screen", title="", alt="")
