--- a/src/jade/projects/_projects-content-body.jade
+++ b/src/jade/projects/_projects-content-body.jade
@@ -30,60 +30,66 @@ main.projects-content
         |Check out the latest in cloud management software!
         include ../../svg/misc-icons/link.svg
 
+    hr.divider-rule
+
     div.project#chime
-      h3.home-project__name Chime Signup
-      .project__feature.project__feature--overflow.project__feature--chime
-        p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+      .project__feature.project__feature--spaced
+        .project__intro-copy.project__intro-copy--spaced
+          h3.home-project__name Chime Signup
+          p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+          a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
+            |See it here!
+            include ../../svg/misc-icons/link.svg
         .project__image-chime-wrapper
           img(src="img/chime_desktop_1x.png", srcset="img/chime_desktop_1x.png 1x, img/chime_desktop_2x.png 2x", class="project__image", title="", alt="")
-          //- include ../modules/_mobile-phone.jade
-          //- img(src="img/chime_mobile.png", class="project__image project__image-mobile", title="", alt="")
-      .project__feature--column
-        p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
-      p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
-      a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
-        |See it here!
-        include ../../svg/misc-icons/link.svg
+          include ../modules/_mobile-phone.jade
+
+    hr.divider-rule
 
     div.project#jorsek-docs
-      h3.home-project__name Jorsek Docs Portal
-      .project__feature--column
-        p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
-        img(src="img/docs_portal_1x.png", srcset="img/docs_portal_1x.png 1x, img/docs_portal_2x.png 2x", class="project__image", title="", alt="")
-      .project__feature--column
+      .project__feature.project__feature--spaced
+        .project__intro-copy.project__intro-copy--spaced
+          h3.home-project__name Jorsek Docs Portal
+          p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
+        img(src="img/docs_portal_1x.png", srcset="img/docs_portal_1x.png 1x, img/docs_portal_2x.png 2x", class="project__image project__image--spaced", title="", alt="")
+      .project__feature--column.project__feature--reverse
         p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
         img(src="img/docs_portal_content_1x.png", srcset="img/docs_portal_content_1x.png 1x, img/docs_portal_content_2x.png 2x", class="project__image", title="", alt="")
       a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
         |See it here!
         include ../../svg/misc-icons/link.svg
 
+    hr.divider-rule
+
     div.project#sasb-nav
-      h3.home-project__name SASB Navigator
-      .project__feature--column
-        p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
-        img(src="img/SASB_SN_1x.jpg", srcset="img/SASB_SN_1x.jpg 1x, img/SASB_SN_2x.jpg 2x", class="project__image", title="", alt="")
-      p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
-      a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
-        |See it here!
-        include ../../svg/misc-icons/link.svg
+      .project__feature.project__feature--spaced
+        .project__intro-copy.project__intro-copy--spaced
+          h3.home-project__name SASB Navigator
+          p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
+          a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
+            |See it here!
+            include ../../svg/misc-icons/link.svg
+        img(src="img/SASB_SN_1x.jpg", srcset="img/SASB_SN_1x.jpg 1x, img/SASB_SN_2x.jpg 2x", class="project__image project__image--spaced", title="", alt="")
 
   section.projects-content__group
     h2.projects-content__group-header.section-heading__text For Fun
     .section-heading__line.section-heading__line--right
 
     div.project#better-reads
-      h3.home-project__name Better Reads
-      .project__feature--column
-        p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
-        img(src="img/Better_Reads_1x.png", srcset="img/Better_Reads_1x.png 1x, img/Better_Reads_2x.png 2x", class="project__image", title="", alt="")
-      p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
-      a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
-        |See it here!
-        include ../../svg/misc-icons/link.svg
+      .project__feature.project__feature--spaced
+        .project__intro-copy.project__intro-copy--spaced
+          h3.home-project__name Better Reads
+          p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
+          a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
+            |See it here!
+            include ../../svg/misc-icons/link.svg
+        img(src="img/Better_Reads_1x.png", srcset="img/Better_Reads_1x.png 1x, img/Better_Reads_2x.png 2x", class="project__image project__image--spaced", title="", alt="")
+
+    hr.divider-rule
 
     div.project#commutecast
-      h3.home-project__name CommuteCast
-      .project__feature--column
-        p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
-        img(src="img/Commute_Cast_1x.jpg", srcset="img/Commute_Cast_1x.jpg 1x, img/Commute_Cast_2x.jpg 2x", class="project__image", title="", alt="")
-      p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+      .project__feature.project__feature--spaced
+        .project__intro-copy.project__intro-copy--spaced
+          h3.home-project__name CommuteCast
+          p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
+        img(src="img/Commute_Cast_1x.jpg", srcset="img/Commute_Cast_1x.jpg 1x, img/Commute_Cast_2x.jpg 2x", class="project__image project__image--spaced", title="", alt="")
