--- a/src/scss/modules/mobile-phone/mobile-phone.scss
+++ b/src/scss/modules/mobile-phone/mobile-phone.scss
@@ -10,12 +10,34 @@
   @include desktop {
     display: flex;
     flex-direction: column;
+    position: absolute;
+    top: 180px;
+    left: -50px;
+    font-size: 0.55em;
+  }
+
+  @include desktop-wide {
+    top: 210px;
+    left: -60px;
+    font-size: 0.55em;
+  }
+
+  @include desktop-wide-m {
+    top: 235px;
+    left: -75px;
+    font-size: .65em;
+  }
+
+  @include desktop-wide-l {
+    top: 240px;
+    left: -100px;
+    font-size: 0.8em;
   }
 
   &__camera {
     width: 0.6em;
     height: 0.6em;
-    border-radius: 1.25em;
+    border-radius: 10px;
     background-color: grey;
     margin: 1.25em auto 0.5em;
   }
@@ -29,7 +51,6 @@
   }
 
   &__screen {
-    height: 31.5em;
-    background: white;
+    margin-top: 6px;
   }
 }
