--- a/src/scss/vars/_breakpoints.scss
+++ b/src/scss/vars/_breakpoints.scss
@@ -3,5 +3,6 @@ $tablet: 700px;
 $tablet-wide: 850px;
 $desktop: 1024px;
 $desktop-wide: 1250px;
+$desktop-wide-m: 1550px;
 $desktop-wide-l: 1750px;
 $desktop-wide-xl: 2040px;
